--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@angular/service-worker": "^19.2.14",
+    "@angular/service-worker": "^19.2.6",
     "@angular/ssr": "^19.1.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
@@ -33,6 +33,7 @@
     "angular": "^1.8.3",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "idb": "^8.0.3",
     "jquery": "^3.7.1",
     "ngx-countries-dropdown": "^3.0.1",
     "primeicons": "^7.0.0",
