--- a/angular.json
+++ b/angular.json
@@ -57,12 +57,19 @@
                 "scripts": true,
                 "styles": false
               },
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/app/environment.ts",
+                  "with": "src/app/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+              
             }
           },
           "defaultConfiguration": "production"
