--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "start:electron": "electron ./app.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:cashier": "node dist/cashier/server/server.mjs"
@@ -20,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@angular/service-worker": "^19.2.6",
+    "@angular/service-worker": "^19.2.14",
     "@angular/ssr": "^19.1.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
@@ -33,14 +34,15 @@
     "angular": "^1.8.3",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
-    "idb": "^8.0.3",
     "jquery": "^3.7.1",
     "ngx-countries-dropdown": "^3.0.1",
+    "ngx-infinite-scroll": "^19.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
     "pusher-js": "^8.4.0",
     "rxjs": "~7.8.0",
     "select2": "^4.1.0-rc.0",
+    "systeminformation": "^5.27.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -55,6 +57,8 @@
     "@types/jquery": "^3.5.32",
     "@types/node": "^18.19.86",
     "@types/uuid": "^10.0.0",
+    "electron": "^38.1.0",
+    "electron-builder": "^26.0.12",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
