--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "laravel-echo": "^2.2.6",
     "ngx-countries-dropdown": "^3.0.1",
     "ngx-infinite-scroll": "^19.0.0",
     "primeicons": "^7.0.0",
@@ -42,6 +43,7 @@
     "pusher-js": "^8.4.0",
     "rxjs": "~7.8.0",
     "select2": "^4.1.0-rc.0",
+    "socket.io-client": "^4.8.1",
     "systeminformation": "^5.27.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -56,6 +58,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
     "@types/node": "^18.19.86",
+    "@types/pusher-js": "^4.2.2",
     "@types/uuid": "^10.0.0",
     "electron": "^38.1.0",
     "electron-builder": "^26.0.12",
