--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "start:electron": "electron ./app.js",
+    "build:dev": "ng build --configuration development",
+    "electron": "electron ./app.js",
+    "start:electron": "npm run build:dev && electron ./app.js",
+    "electron:prod": "npm run build && electron ./app.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:cashier": "node dist/cashier/server/server.mjs"
@@ -33,7 +36,10 @@
     "@primeuix/themes": "^1.2.1",
     "angular": "^1.8.3",
     "bootstrap": "^5.3.5",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-network": "^3.0.0-alpha.5",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "laravel-echo": "^2.2.6",
     "ngx-countries-dropdown": "^3.0.1",
